--- a/About.html
+++ b/About.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="Bharat Agarwal">
-  <meta name="Description" content="ADP Back Office Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
+  <meta name="author" content="SIVA SANKAR REDDY">
+  <meta name="Description" content="SS REDDY Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
 " />
   <meta name="Keywords" content="Accounting outsourcing companies, Tax Consultant, Company Formation, ca, Let us take care of your accounting data entry. From bookkeeping, accounts payable and receivable, journal, general ledger to invoice data entry, we do it all, data processing, outsourcing, due diligence, data prepations, accounting, finance, business management, support services, auxiliary servies," />
-  <title>About Us ::ADP Back Office</title>
+  <title>About Us ::SS REDDY & ASSOCIATES -CHARTERED ACCOUNTANTS-</title>
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
@@ -48,8 +48,8 @@
           <div class="col-md-7 col-sm-8">
             <div class="header_top_left">
               <ul>
-                <li><a href="#"><i class="icofont icofont-envelope"></i>email@bharat.com</a></li>
-                <li><a href="#"><i class="icofont icofont-iphone"></i>+91 9971853651, +91 9873191797</a></li>
+                <li><a href="#"><i class="icofont icofont-envelope"></i>casivasankarreddygali@gmail.com</a></li>
+                <li><a href="#"><i class="icofont icofont-iphone"></i>+91 9704583291 </a></li>
                 <!--<li><a href="#"><i class="icofont icofont-clock-time"></i>Mon-Sat(11am-5pm)</a></li>-->
               </ul>
             </div>
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="col-sm-2 col-xs-6">
             <div class="bh_logo">
-              <a href="index.html"><img src="images/logo.jpg" alt="logo of ca sitaram"></a>
+              <a href="index.html"><img src="images/Doc1.jpeg" alt="logo of ca sitaram"></a>
             </div>
           </div>
           <div class="col-sm-10">
@@ -81,7 +81,6 @@
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li class="activeLink"><a href="About.html">About Us</a></li>
-                <li><a href="TeamMembers.html">Team Members</a></li>
                 <li><a href="Service.html">Service</a></li>
                 <li><a href="Contact.html">Contact</a></li>
               </ul>
@@ -112,7 +111,7 @@
         <div class="col-sm-6 col-xs-12">
           <div class="bh_worksWith_text text-justify">
             <h2>We Works with <br>focus & Understanding.</h2>
-            <p>Established in <b>2011</b>, <strong>CA. AADI AGARWAL</strong> is a highly specialised
+            <p>Established in <b>2024</b>, <strong>CA SIVA SANKAR REDDY</strong> is a highly specialised
               expert with a unique focus on meeting specific accounting and business needs. Our
               philosophy is to develop and maintain close working relationships with our
               clients. We therefore place great importance in staff, associate and partner level, to meet
@@ -240,7 +239,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_footer_left">
               <div class="bh_footer_logo">
-                <a href="index.html"><img src="images/logo.jpg" alt="footer logo"></a>
+                <a href="index.html"><img src="images/Doc1.jpeg" alt="footer logo"></a>
               </div>
               <p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
               <div class="bh_footer_social_link">
@@ -248,7 +247,7 @@
                   <span class="icon_go"><a href="#"><i class="fa fa-facebook"></i></a></span>
                   <span class="icon_go"><a href="#"><i class="fa fa-twitter"></i></a></span>
                   <span class="icon_go"><a href="#"><i class="fa fa-instagram"></i></a></span>
-                  <span class="icon_go"><a href="mailto:bharatagsrwal@gmail.com"><i class="fa fa-envelope"></i></a></span>
+                  <span class="icon_go"><a href="mailto:casivasankareddygali@gmail.com"><i class="fa fa-envelope"></i></a></span>
                 </ul>
               </div>
             </div>
@@ -263,7 +262,7 @@
             </div>
             <div class="bh_important_link2">
               <ul>
-                <li><a href="TeamMembers.html">PROFILES</a></li>
+                
                 <li><a href="Contact.html">CONTACT</a></li>
               </ul>
             </div>
@@ -271,7 +270,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_recent_projects">
               <h2>Our Address</h2>
-              <p><i class="fa fa-street-view"></i> F2-1101, Vatika Gurgaon 21, Vatika India Next, Sector-83,<br> Gurgaon - 122004, Haryana, India</p>
+              <p><i class="fa fa-street-view"></i>5-52-38/1, GoundFloor, Opp TSR Kids School, 6/14 Brodipet,GUNTUR,<br> Andhra Pradesh - 522002, India</p>
             </div>
           </div>
         </div>
@@ -282,8 +281,8 @@
         <div class="bh_footer_bottom_content text-center">
           <div class="row">
             <div class="col-xs-12">
-              <p> CA AADI AGARWAL 2018 &copy; All right reserved</p>
-              <p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:bharatagsrwal@gmail.com?Subject=Hello" target="_blank">Bharat Agarwal</a></p>
+              <p> CA SIVA SANKAR REDDY &copy; All right reserved</p>
+              <p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:casivasankarreddygali@gmail.com?Subject=Hello" target="_blank">siva sankar reddy</a></p>
             </div>
           </div>
         </div>
