--- a/Contact.html
+++ b/Contact.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="Bharat Agarwal">
-  <meta name="Description" content="ADP Back Office Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
+  <meta name="author" content="SIVA SANKAR REDDY">
+  <meta name="Description" content="SS REDDY Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
 " />
-  <meta name="Keywords" content="Accounting outsourcing companies, Tax Consultant, Company Formation, ca, Let us take care of your accounting data entry. From bookkeeping, accounts payable and receivable, journal, general ledger to invoice data entry, we do it all, data processing, outsourcing, due diligence, data prepations, accounting, finance, business management, support services, auxiliary servies," /><title>Contact Us :: ADP Back Office</title>
+  <meta name="Keywords" content="Accounting outsourcing companies, Tax Consultant, Company Formation, ca, Let us take care of your accounting data entry. From bookkeeping, accounts payable and receivable, journal, general ledger to invoice data entry, we do it all, data processing, outsourcing, due diligence, data prepations, accounting, finance, business management, support services, auxiliary servies," /><title>Contact Us :: SS REDDY & ASSOCIATES -CHARTERED ACCOUNTANTS-</title>
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
@@ -45,8 +45,8 @@
           <div class="col-md-7 col-sm-8">
             <div class="header_top_left">
               <ul>
-                <li><a href="#"><i class="icofont icofont-envelope"></i>email@bharat.com</a></li>
-                <li><a href="#"><i class="icofont icofont-iphone"></i>+91 9971853651, +91 9873191797</a></li>
+                <li><a href="#"><i class="icofont icofont-envelope"></i>casivasankarreddygali@gmail.com</a></li>
+                <li><a href="#"><i class="icofont icofont-iphone"></i>+91 9704583291</li>
               </ul>
             </div>
           </div>
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-sm-2 col-xs-6">
             <div class="bh_logo">
-              <a href="index.html"><img src="images/logo.jpg" alt="logo "></a>
+              <a href="index.html"><img src="images/Doc1.jpeg" alt="logo "></a>
             </div>
           </div>
           <div class="col-sm-10">
@@ -77,7 +77,6 @@
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About Us</a></li>
-                <li><a href="TeamMembers.html">Team Members</a></li>
                 <li><a href="Service.html">Service</a></li>
                 <li class="activeLink"><a href="Contact.html">Contact</a></li>
               </ul>
@@ -115,11 +114,11 @@
             <div class="single_contact">
               <h3>Address</h3>
               <address>
-                <p> F2-1101, Vatika Gurgaon 21, Vatika India Next, Sector-83,
-                    Gurgaon - 122004, Haryana, India<br />
-                  Mobile : <strong>+91 9971853651</strong><br />
-                  Mobile : <strong>+91 9873191797</strong><br />
-                  Email : <strong>email@bharat.com</strong></p>
+                <p> 5-52-38/1, GroundFloor, Opp TSR Kids School,
+                  6/14 Brodipet, 
+                  GUNTUR, Andhra Pradesh - 522002<br />
+                  Mobile : <strong>+91 9704583291</strong><br />
+                  Email : <strong>casivasankarreddygali@gmail.com</strong></p>
               </address>
             </div>
           </div>
@@ -127,7 +126,7 @@
         <div class="col-sm-8">
           <div class="bh_contact_right">
             <div>
-              <iframe style="border: 0;padding: 0;margin: 0;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1609.1818323875086!2d76.96971594506716!3d28.399627825000227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d184b4b9366bb%3A0x9985c975d7bc032c!2sVatika+Gurgaon+21-INXT!5e0!3m2!1sen!2sin!4v1545378874058"
+              <iframe style="border: 0;padding: 0;margin: 0;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3856.0174379140954!2d80.44450021536458!3d16.304140788643867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35ef1339fca161%3A0xb1c55f93310930ed!2sTSR%20Kids%20School%2C%20Brodipet%2C%20Guntur%2C%20Andhra%20Pradesh%20522002!5e0!3m2!1sen!2sin!4v1697186574532!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>"
                 width="100%" height="260px"></iframe>
             </div>
           </div>
@@ -189,7 +188,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="rk_footer_left">
               <div class="bh_footer_logo">
-                <a href="index.html"><img src="images/logo.jpg" alt="footer logo"></a>
+                <a href="index.html"><img src="images/Doc1.jpeg" alt="footer logo"></a>
               </div>
               <p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
               <div class="bh_footer_social_link">
@@ -212,7 +211,7 @@
             </div>
             <div class="bh_important_link2">
               <ul>
-                <li><a href="TeamMembers.html">PROFILES</a></li>
+         
                 <li><a href="Contact.html">CONTACT</a></li>
               </ul>
             </div>
@@ -220,7 +219,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_recent_projects">
               <h2>Our Address</h2>
-              <p><i class="fa fa-street-view"></i> F2-1101, Vatika Gurgaon 21, Vatika India Next, Sector-83,<br> Gurgaon - 122004, Haryana, India</p>
+              <p><i class="fa fa-street-view"></i> 5-52-38/1, GroundFloor, Opp TSR Kids School <br>  6/14 Brodipet,GUNTUR, India</p>
             </div>
           </div>
         </div>
@@ -231,8 +230,8 @@
         <div class="bh_footer_bottom_content text-center">
           <div class="row">
             <div class="col-xs-12">
-              <p> CA AADI AGARWAL 2018 &copy; All right reserved</p>
-              <p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:bharatagsrwal@gmail.com?Subject=Hello" target="_blank">Bharat Agarwal</a></p>
+              <p> CA siva sankar reddy 2024 &copy; All right reserved</p>
+              <p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:bharatagsrwal@gmail.com?Subject=Hello" target="_blank">ca siva sankar reddy</a></p>
             </div>
           </div>
         </div>
