--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="Bharat Agarwal">
-  <meta name="Description" content="ADP Back Office Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
+  <meta name="author" content="siva sankar reddy">
+  <meta name="Description" content="SS REDDY and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
 " />
   <meta name="Keywords" content="Accounting outsourcing companies, Tax Consultant, Company Formation, ca, Let us take care of your accounting data entry. From bookkeeping, accounts payable and receivable, journal, general ledger to invoice data entry, we do it all, data processing, outsourcing, due diligence, data prepations, accounting, finance, business management, support services, auxiliary servies," />
-  <title>ADP Back Office</title>
+  <title>SS REDDY & ASSOCIATES — CHARTERED ACCOUNTANTS —</title>
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
@@ -55,8 +55,8 @@
           <div class="col-md-7 col-sm-8">
             <div class="header_top_left">
               <ul>
-                <li><a href="#"><i class="icofont icofont-envelope"></i>email@bharat.com</a></li>
-                <li><a href="#"><i class="icofont icofont-iphone"></i>+91 9971853651, +91 9873191797</a></li>
+                <li><a href="#"><i class="icofont icofont-envelope"></i>casivasankarreddygali@gmail.com</a></li>
+                <li><a href="#"><i class="icofont icofont-iphone"></i>+91 9704583291</a></li>
               </ul>
             </div>
           </div>
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-sm-2 col-xs-6">
             <div class="bh_logo">
-              <a href="index.html"><img src="images/logo.jpg" alt="Logo of ca"></a>
+              <a href="index.html"><img src="images/Doc1.jpeg" alt="Logo of ca"></a>
             </div>
           </div>
           <div class="col-sm-10">
@@ -87,7 +87,6 @@
               <ul class="nav navbar-nav">
                 <li class="activeLink"><a href="index.html">Home</a></li>
                 <li><a href="About.html">About Us</a></li>
-                <li><a href="TeamMembers.html">Team Members</a></li>
                 <li><a href="Service.html">Service</a></li>
                 <li><a href="Contact.html">Contact</a></li>
               </ul>
@@ -153,12 +152,12 @@
           <div class="wpb_text_column wpb_content_element  vc_1442467032239 ">
             <div class="wpb_wrapper">
               <h3>Who we are?</h3>
-              <p>We are prominent <strong>Chartered Accountants in India</strong>. We offer services in Jaipur and other major cities in India, like accounts outsourcing, auditing, company formation in India, Business taxation, corporate compliance,
+              <p>We are prominent <strong>Chartered Accountants in India</strong>. We offer services in Guntur and other major cities in India, like accounts outsourcing, auditing, company formation in India, Business taxation, corporate compliance,
                 starting business in India, registration of foreign companies, taxation of expatriates etc.</p>
             </div>
           </div><strong><strong>
               <div class="ivan-button-align to-left"> <span class="vc_1442467062925">
-                  <a href="TeamMembers.html" class="dt-sc-button  dt-newBtn-3" data-wow-delay="0ms" data-wow-iteration="1">
+                  <a href="About.html" class="dt-sc-button  dt-newBtn-3" data-wow-delay="0ms" data-wow-iteration="1">
                     <span>READ MORE</span>
                     <i class="fa fa-check"></i>
                   </a>
@@ -255,7 +254,7 @@
         <div class="col-md-6 col-sm-7 col-xs-12">
           <div class="bh_about_right_text bh_section_title text-right">
             <h2>ABOUT US</h2>
-            <p>Established in 2011, <b>AADI AGARWAL</b> is a highly specialised
+            <p>Established in 2024, <b>SIVA SANKAR REDDY</b> is a highly specialised
               expert with a unique focus on meeting specific accounting and business needs. Our
               philosophy is to develop and maintain close working relationships with our
               clients. We therefore place great importance in staff, associate and partner level, to meet
@@ -298,7 +297,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_footer_left">
               <div class="bh_footer_logo">
-                <a href="index.html"><img src="images/logo.jpg" alt="footer logo"></a>
+                <a href="index.html"><img src="images/Doc1.jpEg" alt="footer logo"></a>
               </div>
               <p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
               <div class="bh_footer_social_link">
@@ -320,7 +319,7 @@
             </div>
             <div class="bh_important_link2">
               <ul>
-                <li><a href="TeamMembers.html">PROFILES</a></li>
+               
                 <li><a href="Contact.html">CONTACT</a></li>
               </ul>
             </div>
@@ -328,7 +327,8 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_recent_projects">
               <h2>Our Address</h2>
-              <p><i class="fa fa-street-view"></i> F2-1101, Vatika Gurgaon 21, Vatika India Next, Sector-83,<br> Gurgaon - 122004, Haryana, India</p>
+              <p><i class="fa fa-street-view"></i> 5-52-38/1, GoundFloor, Opp TSR Kids School<br> 6/14 Brodipet, 
+                GUNTUR,Andhra Pradesh - 522002, India</p>
             </div>
           </div>
         </div>
@@ -339,8 +339,8 @@
         <div class="bh_footer_bottom_content text-center">
           <div class="row">
             <div class="col-xs-12">
-              <p> CA AADI AGARWAL 2018 &copy; All right reserved</p>
-              <p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:bharatagsrwal@gmail.com?Subject=Hello" target="_blank">Bharat Agarwal</a></p>
+              <p> CA SIVA SANKAR REDDY &copy; All right reserved</p>
+              <p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:casivasankarreddygali@gmail.com?Subject=Hello" target="_blank">siva sankar reddy</a></p>
             </div>
           </div>
         </div>
