--- a/Service.html
+++ b/Service.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="author" content="Bharat Agarwal">
-	<meta name="Description" content="ADP Back Office Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
+	<meta name="author" content="ca siva sankar reddy">
+	<meta name="Description" content="SS REDDY Back Of Accounting and Data processing, Accounts Payable Data Entry, Accounts Receivable Data Entry, Invoice Data Entry, Auditing Data Entry, Manual Journal Entry, General Ledger Data Entry, Financial Data Entry, Inventory Data Entry
 	" />
 	<meta name="Keywords" content="Accounting outsourcing companies, Tax Consultant, Company Formation, ca, Let us take care of your accounting data entry. From bookkeeping, accounts payable and receivable, journal, general ledger to invoice data entry, we do it all, data processing, outsourcing, due diligence, data prepations, accounting, finance, business management, support services, auxiliary servies," />
-	<title>Services :: ADP Back Office</title>
+	<title>Services :: SS REDDY & ASSOCIATES -CHARTERED ACCOUNTANTS- </title>
 	<link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
@@ -62,8 +62,8 @@
 					<div class="col-md-7 col-sm-8">
 						<div class="header_top_left">
 							<ul>
-								<li><a href="#"><i class="icofont icofont-envelope"></i>email@bharat.com</a></li>
-								<li><a href="#"><i class="icofont icofont-iphone"></i>+91 9971853651, +91 9873191797</a></li>
+								<li><a href="#"><i class="icofont icofont-envelope"></i>casivasankarreddygali@gmail.com</a></li>
+								<li><a href="#"><i class="icofont icofont-iphone"></i>+91 9704583291</a></li>
 							</ul>
 						</div>
 					</div>
@@ -77,7 +77,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-2 col-xs-6">
-						<div class="bh_logo"> <a href="index.html"><img src="images/logo.jpg" alt="logo"></a> </div>
+						<div class="bh_logo"> <a href="index.html"><img src="images/Doc1.jpeg" alt="logo"></a> </div>
 					</div>
 					<div class="col-sm-10">
 						<div class="navbar-header">
@@ -87,7 +87,6 @@
 							<ul class="nav navbar-nav">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="About.html">About Us</a></li>
-								<li><a href="TeamMembers.html">Team Members</a></li>
 								<li class="activeLink"><a href="Service.html">Service</a></li>
 								<li><a href="Contact.html">Contact</a></li>
 							</ul>
@@ -236,14 +235,14 @@
 				<div class="row">
 					<div class="col-sm-4 col-xs-12">
 						<div class="rk_footer_left">
-							<div class="bh_footer_logo"> <a href="index.html"><img src="images/logo.jpg" alt="footer logo"></a> </div>
+							<div class="bh_footer_logo"> <a href="index.html"><img src="images/Doc1.jpeg" alt="footer logo"></a> </div>
 							<p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
 							<div class="bh_footer_social_link">
 								<ul>
 									<span class="icon_go"><a href="#"><i class="fa fa-facebook"></i></a></span>
 									<span class="icon_go"><a href="#"><i class="fa fa-twitter"></i></a></span>
 									<span class="icon_go"><a href="#"><i class="fa fa-instagram"></i></a></span>
-									<span class="icon_go"><a href="mailto:bharatagsrwal@gmail.com"><i class="fa fa-envelope"></i></a></span>
+									<span class="icon_go"><a href="mailto:casivasankarreddygali@gmail.com<"><i class="fa fa-envelope"></i></a></span>
 								</ul>
 							</div>
 						</div>
@@ -258,7 +257,7 @@
 						</div>
 						<div class="bh_important_link2">
 							<ul>
-								<li><a href="TeamMembers.html">PROFILES</a></li>
+							
 								<li><a href="Contact.html">CONTACT</a></li>
 							</ul>
 						</div>
@@ -266,7 +265,7 @@
 					<div class="col-sm-4 col-xs-12">
 						<div class="bh_recent_projects">
 							<h2>Our Address</h2>
-							<p><i class="fa fa-street-view"></i> F2-1101, Vatika Gurgaon 21, Vatika India Next, Sector-83,<br> Gurgaon - 122004, Haryana, India</p>
+							<p><i class="fa fa-street-view"></i> 5-52-38/1, GoundFloor, Opp TSR Kids School, 6/14 Brodipet,GUNTUR,<br> Andhra Pradesh - 522002, India</p>
 						</div>
 					</div>
 				</div>
@@ -277,8 +276,8 @@
 				<div class="bh_footer_bottom_content text-center">
 					<div class="row">
 						<div class="col-xs-12">
-							<p> CA AADI AGARWAL 2018 &copy; All right reserved</p>
-							<p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:bharatagsrwal@gmail.com?Subject=Hello" target="_blank">Bharat Agarwal</a></p>
+							<p> CA SIVA SANKAR REDDY &copy; All right reserved</p>
+							<p>Made With <span><i class="icofont icofont-heart-alt animated infinite zoomIn"></i></span> by <a href="mailto:casivasankarreddygali@gmail.com?Subject=Hello" target="_blank">SIVA SANKAR REDDY</a></p>
 						</div>
 					</div>
 				</div>
