--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_footer_left">
               <div class="bh_footer_logo">
-                <a href="index.html"><img src="images/Doc1.jpEg" alt="footer logo"></a>
+                <a href="index.html"><img src="images/Doc1.jpeg" alt="footer logo"></a>
               </div>
               <p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
               <div class="bh_footer_social_link">
@@ -305,7 +305,7 @@
                   <span class="icon_go"><a href="#"><i class="fa fa-facebook"></i></a></span>
                   <span class="icon_go"><a href="#"><i class="fa fa-twitter"></i></a></span>
                   <span class="icon_go"><a href="#"><i class="fa fa-instagram"></i></a></span>
-                  <span class="icon_go"><a href="mailto:bharatagsrwal@gmail.com"><i class="fa fa-envelope"></i></a></span></ul>
+                  <span class="icon_go"><a href="mailto:casivasankarreddygali@gmail.com"><i class="fa fa-envelope"></i></a></span></ul>
               </div>
             </div>
           </div>
