--- a/Contact.html
+++ b/Contact.html
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-sm-2 col-xs-6">
             <div class="bh_logo">
-              <a href="index.html"><img src="images/Doc1.jpeg" alt="logo "></a>
+              <a href="index.html"><img src="images/Doc1.jpg" alt="logo "></a>
             </div>
           </div>
           <div class="col-sm-10">
@@ -188,7 +188,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="rk_footer_left">
               <div class="bh_footer_logo">
-                <a href="index.html"><img src="images/Doc1.jpeg" alt="footer logo"></a>
+                <a href="index.html"><img src="images/Doc1.jpg" alt="footer logo"></a>
               </div>
               <p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
               <div class="bh_footer_social_link">
@@ -196,7 +196,7 @@
                   <span class="icon_go"><a href="#"><i class="fa fa-facebook"></i></a></span>
                   <span class="icon_go"><a href="#"><i class="fa fa-twitter"></i></a></span>
                   <span class="icon_go"><a href="#"><i class="fa fa-instagram"></i></a></span>
-                  <span class="icon_go"><a href="mailto:bharatagsrwal@gmail.com"><i class="fa fa-envelope"></i></a></span>
+                  <span class="icon_go"><a href="mailto:casivasankarreddygali@gmail.com"><i class="fa fa-envelope"></i></a></span>
                 </ul>
               </div>
             </div>
