--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-sm-2 col-xs-6">
             <div class="bh_logo">
-              <a href="index.html"><img src="images/Doc1.jpeg" alt="Logo of ca"></a>
+              <a href="index.html"><img src="images/Doc1.jpg" alt="Logo of ca"></a>
             </div>
           </div>
           <div class="col-sm-10">
@@ -297,7 +297,7 @@
           <div class="col-sm-4 col-xs-12">
             <div class="bh_footer_left">
               <div class="bh_footer_logo">
-                <a href="index.html"><img src="images/Doc1.jpeg" alt="footer logo"></a>
+                <a href="index.html"><img src="images/Doc1.jpg" alt="footer logo"></a>
               </div>
               <p>We provide quality services to our clients with commitment to uphold high standards of honesty, ethics and integrity.</p>
               <div class="bh_footer_social_link">
